Refactor codebase for clarity, consistency, and enhanced token handling